--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Kaleigh Jaswan</p>
+					<p class="text-name">Kayleigh Jaswan</p>
 					<p class="text-title-company">Marketing Assistant & QA</p>
 					<p class="text-title-company">My Flex Health</p>
 				</div>
@@ -37,14 +37,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:KaleighJ@myflexhealth.com.au">
+		<a href="mailto:KayleighJ@myflexhealth.com.au">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">KaleighJ@myflexhealth.com.au</p>
+						<p class="text-detail">KayleighJ@myflexhealth.com.au</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
